echo-server: deprecated URL(ctx, spec), use URI.toURL() instead.